<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryApp</string>
    <string name="new_story">New Story</string>
    <string name="alert_massage_login">You have successfully logged in. Can\'t wait to see the world\'s story?</string>
    <string name="alert_message_sign_up">Your account is already here. Come on, log in and see the world\'s story.</string>
    <string name="title_welcome">Welcome to the Story App</string>
    <string name="message_welcome">You ask what application this is, let me tell you, this application is called <b>Story App</b>, you sometimes… RAWWR!!</string>
    <string name="login">Login</string>
    <string name="text_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="copyright">© 2022 StoryApp </string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="detail_toolbar_title">%s\'s story</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password is not same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">SignUp Activity</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_welcome">Welcome Activity</string>
    <string name="title_login">Are you ready to see the world\'s story?</string>
    <string name="massage_login">Enter your data first..</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="title_signup">Complete your data below.</string>
    <string name="name">Name :</string>
    <string name="logout">Logout</string>
    <string name="greeting">Halo %1$s </string>
    <string name="profile">Profile</string>
    <string name="description">Description : </string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_camera">Camera</string>
    <string name="input_text_here">Input Text Here..</string>
    <string name="upload_story">Upload Story</string>
    <string name="next">Next</string>
    <string name="input_name">Input Name</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="fill">fill it first</string>
    <string name="six_character">Password must be 6 characters</string>
    <string name="alert_upload_story">There is something missing</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="alert_logout">You want to logout</string>
    <string name="alert_dialog_logout">You need to login again after logging out</string>
    <string name="alert_no_permision_location">Did not get permissions</string>
    <string name="alert_location_not_allowed">Location not allowed</string>
    <string name="story_location">Story\'s Location</string>
    <string name="alert_logout_successfully">Logged out successfully</string>
    <string name="location_text">Location</string>
    <string name="enable_location">Please activate your location first</string>

</resources>