<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addstory.AddStoryActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nv_detail_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_baseline_placeholder_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue_3"
                android:drawableLeft="@drawable/ic_baseline_gallery_24"
                android:text="@string/upload_image"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/ivPreview"
                app:layout_constraintTop_toBottomOf="@+id/ivPreview" />

            <Button
                android:id="@+id/btn_upload_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue_3"
                android:drawableLeft="@drawable/ic_baseline_addphoto_24"
                android:text="@string/upload_camera"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/ivPreview"
                app:layout_constraintTop_toBottomOf="@+id/ivPreview" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text_border"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/input_text_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_upload_image"
                tools:layout_editor_absoluteX="16dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Lokasi "
                app:layout_constraintBottom_toBottomOf="@+id/uploadStory"
                app:layout_constraintStart_toEndOf="@+id/uploadStory"
                app:layout_constraintTop_toTopOf="@+id/uploadStory" />

            <Button
                android:id="@+id/uploadStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_3"
                android:text="@string/upload_story"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_description" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>